--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,48 @@ html{
     height: 100vh;
     width: 100%;
 }
+
+body{
+    margin: 0;
+    padding: 0;
+}
+
+.keys {
+    display: flex;
+    flex: 1;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+  }
+
+.key {
+    border: 3px solid black;
+    border-radius: 3px;
+    margin: 1px;
+    font-size: 1rem;
+    padding: 1px 3px;
+    transition: all 1.07s ease;
+    width: 10rem;
+    text-align: center;
+    color: white;
+    background: rgba(0, 0, 0, 0.5);
+    text-shadow: 0 0 .5rem black;
+  }
+  
+  .playing {
+    transform: scale(1.1);
+    border-color: #ffc600;
+    box-shadow: 0 0 1rem #ffc600;
+  }
+  
+  kbd {
+    display: block;
+    font-size: 4rem;
+  }
+  
+  .sound {
+    font-size: 1rem;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    color: #ffc600;
+  }
