--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 html{
-    background-image: url('../img/ss-bg.jpg');
+    background-image: url('../img/ss-bg.png');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -24,7 +24,7 @@ body{
     border: 3px solid black;
     border-radius: 3px;
     margin: 1px;
-    font-size: 1rem;
+    font-size: 2px;
     padding: 1px 3px;
     transition: all .1s ease;
     width: 10rem;
